# BatterySimulation

./: .gitignore  README.md  pyproject.toml
batsim/: pyproject.toml
batsim/src/batsim/: __init__.py  core.py  io.py
batsim/tests/: test_core.py
data/: battery.xlsx  markets.xlsx
example/: Run_simulation.ipynb  pyproject.toml  requirements.txt  simulate.py
