[project]
name = "BatterySimulation"
version = "0.1.0"
description = "Simulate battery dispatch within simplified electricity markets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "batsim",
    "notebook>=7.4.5",
    "pandas[excel]>=2.3.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
    "ruff>=0.12.12",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "I",  # Sort imports consistently with isort
    "E501"  # Line too long
]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"

[tool.uv.workspace]
members = [
    "batsim",
]

[tool.uv.sources]
batsim = { workspace = true }
